Removed OpenId CDI.current instead of CdiUtils